crates/voom-cli/tests/snapshots/worker_envelope__worker_envelope__worker_list_uninitialized_db.snap
---
source: crates/voom-cli/tests/worker_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "worker",
  "status": "error",
  "data": null,
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "DB_PARTIAL_SCHEMA",
    "message": "migration error: ControlPlane requires a Current schema; got Uninitialized"
  }
}
