crates/voom-cli/tests/snapshots/worker_envelope__worker_envelope__worker_register_bad_token_returns_conflict.snap
---
source: crates/voom-cli/tests/worker_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "worker",
  "status": "error",
  "data": null,
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "CONFLICT",
    "message": "conflict: node token verification failed"
  }
}
