crates/voom-cli/tests/snapshots/worker_envelope__worker_envelope__worker_show_shows_linked_node_context.snap
---
source: crates/voom-cli/tests/worker_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "worker",
  "status": "ok",
  "data": {
    "worker": {
      "id": 1,
      "node_id": 1,
      "name": "worker-a",
      "kind": "local",
      "status": "registered",
      "registered_at": "[registered-at]",
      "last_seen_at": "[last-seen-at]",
      "retired_at": null,
      "epoch": 0,
      "node": {
        "id": 1,
        "name": "node-a",
        "kind": "local",
        "status": "registered",
        "last_seen_at": "[node-last-seen-at]"
      }
    }
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
